--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,10 @@
   "compilerOptions": {
     "baseUrl": "src",
     "module": "commonjs",
-    "target": "es6"
+    "target": "es6",
+    "paths": {
+      "@styles": ["styles"]
+    }
   },
   "exclude": ["node_modules"]
 }
