--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^4.1.17",
     "lodash.throttle": "^4.1.1",
     "react": "^17.0.2",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
