--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/jest": "^26.0.15",
+    "@types/lodash.throttle": "^4.1.6",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.2",
     "@types/redux-logger": "^3.0.9",
+    "@types/styled-components": "^5.1.17",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
     "eslint": "^7.32.0",
