--- a/package.json
+++ b/package.json
@@ -7,15 +7,14 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.0",
     "@mui/material": "^5.2.2",
-    "@mui/styled-engine-sc": "^5.1.0",
     "@mui/types": "^7.1.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/react-custom-scrollbars": "^4.0.9",
-    "@types/redux": "^3.6.0",
     "axios": "^0.24.0",
     "framer-motion": "^4.1.17",
+    "glob-parent": "^6.0.2",
     "lodash.throttle": "^4.1.1",
     "react": "^17.0.2",
     "react-custom-scrollbars": "^4.2.1",
@@ -23,6 +22,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
     "web-vitals": "^1.0.1"
