--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/react-custom-scrollbars": "^4.0.9",
+    "@types/testing-library__jest-dom": "^5.14.2",
     "axios": "^0.24.0",
     "framer-motion": "^4.1.17",
     "glob-parent": "^6.0.2",
