--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.24.0",
     "framer-motion": "^4.1.17",
     "glob-parent": "^6.0.2",
+    "image-validator": "^1.2.1",
     "lodash.throttle": "^4.1.1",
     "react": "^17.0.2",
     "react-custom-scrollbars": "^4.2.1",
@@ -26,6 +27,7 @@
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
@@ -37,6 +39,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.2",
     "@types/redux-logger": "^3.0.9",
+    "@types/uuid": "^8.3.3",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
     "eslint": "^7.32.0",
