--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@types/react-custom-scrollbars": "^4.0.9",
     "@types/testing-library__jest-dom": "^5.14.2",
     "axios": "^0.24.0",
-    "framer-motion": "^4.1.17",
     "glob-parent": "^6.0.2",
     "image-validator": "^1.2.1",
     "lodash.throttle": "^4.1.1",
@@ -49,6 +48,10 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "2.4.1",
     "typescript": "^4.1.2"
+  },
+  "resolutions": {
+    "//": "See https://github.com/facebook/create-react-app/issues/11773",
+    "react-error-overlay": "6.0.9"
   },
   "scripts": {
     "start": "react-scripts start",
