--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "image-validator": "^1.2.1",
     "lodash.throttle": "^4.1.1",
     "react": "^17.0.2",
+    "react-alice-carousel": "^2.5.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-image-gallery": "^1.2.7",
